#20 refactor: add flexbox to index to vertical and horizontal center content and prevent clipping/overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,16 @@
   padding: 0; 
 }
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   margin: 0;
   font-family: 'Source Sans Pro' ,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
